css version change

--- a/RN.Lux.AngularWebUI/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/RN.Lux.AngularWebUI/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">RN.Lux.AngularWebUI</a>
+            <a class='navbar-brand' [routerLink]="['/home']">Luxembourg Example With Core MVC and Angular</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
