--- a/RN.Lux.MvcWebUI/Views/_ViewImports.cshtml
+++ b/RN.Lux.MvcWebUI/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@addTagHelper"*,Microsoft.AspNetCore.Mvc.TagHelpers"
+﻿@using RN.Lux.MvcWebUI.Models
+@addTagHelper"*,Microsoft.AspNetCore.Mvc.TagHelpers"
 @addTagHelper"*,RN.Lux.MvcWebUI"
