--- a/RN.Lux.MvcWebUI/Views/Product/Index.cshtml
+++ b/RN.Lux.MvcWebUI/Views/Product/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RN.Lux.MvcWebUI.Models.ProductListVM
 
 @{
-    Layout = "~/Views/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div>
     <table class="table col-md-10">
