--- a/RN.Lux.MvcWebUI/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/RN.Lux.MvcWebUI/Views/Shared/Components/CategoryList/Default.cshtml
@@ -3,10 +3,10 @@
     @foreach (var category in Model.Categories)
     {
         var css = "list-group-item";
-        if (category.CategoryId==Model.CurrentCategory)
+        if (category.CategoryID==Model.CurrentCategory)
         {
             css += " active";
         }
-        <a  href="/product/index?categoryId=@category.CategoryId" class="@css">@category.CategoryName</a>
+        <a  href="/product/index?categoryId=@category.CategoryID" class="@css">@category.CategoryName</a>
     }
 </div>
