--- a/RN.Lux.MvcWebUI/Views/Product/Index.cshtml
+++ b/RN.Lux.MvcWebUI/Views/Product/Index.cshtml
@@ -1,33 +1,108 @@
 ﻿@model RN.Lux.MvcWebUI.Models.ProductListVM
-
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Product SB Admin";
+    Layout = "~/Views/Shared/_Layout_v2.cshtml";
 }
-<div class="col-md-10">
-    <table class="table col-md-10">
-        <tr>
-            <td class="col-md-4">Name</td>
-            <td class="col-md-3">Price</td>
-            <td class="col-md-3">Stock</td>
-            <td></td>
-        </tr>
-        @foreach (var product in Model.Products)
-        {
-            <tr>
-                <td class="col-md-4">@product.ProductName</td>
-                <td class="col-md-3">@product.UnitPrice</td>
-                <td class="col-md-3">@product.UnitsInStock</td>
-                <td></td>
-            </tr>
+@section CustomCss
+{
 
-        }
+}
+@section ScriptSection{
+    <!-- jQuery -->
+    <script src="@Url.Content("~/Content/vendor/jquery/jquery.min.js")"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="@Url.Content("~/Content/vendor/bootstrap/js/bootstrap.min.js")"></script>
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="@Url.Content("~/Content/vendor/metisMenu/metisMenu.min.js")"></script>
+    <!-- DataTables JavaScript -->
+    <script src="@Url.Content("~/Content/vendor/datatables/js/jquery.dataTables.min.js")"></script>
+    <script src="@Url.Content("~/Content/vendor/datatables-plugins/dataTables.bootstrap.min.js")"></script>
+    <script src="@Url.Content("~/Content/vendor/datatables-responsive/dataTables.responsive.js")"></script>
+    <!-- Custom Theme JavaScript -->
+    <script src="@Url.Content("~/Content/dist/js/sb-admin-2.js")"></script>
+    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
+    <script>
+        $(document).ready(function () {
+            $('#dataTables-example').DataTable({
+                responsive: true
+            });
+        });
+    </script>
+}
+@*<div class="row">
+        <div class="col-lg-12">
+            <h2 class="page-header">Northwind Products</h2>
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>*@
+<!-- /.row -->
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-green">
+            <div class="panel-heading">
+                Northwind Products
+            </div>
+            <!-- /.panel-heading -->
+            <div class="panel-body">
+                <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                    <thead>
+                    <tr>
+                        <th>Row</th>
+                        <th>Product Name</th>
+                        <th>Unit Price</th>
+                        <th>Units In Stock</th>
+                        <th>Tools</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        @for (int i = 0; i < Model.Products.Count; i++)
+                        {
+                            if (i % 2 == 1)
+                            {
+                                <tr class="odd gradeX">
+                                    <td>@(i+1)</td>
+                                    <td>@Model.Products[i].ProductName</td>
+                                    <td>@Model.Products[i].UnitPrice.ToString("C2")</td>
+                                    <td>@Model.Products[i].UnitsInStock</td>
+                                    <td><a class="btn btn-xs btn-success" asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@Model.Products[i].ProductId">add to cart</a></td>
+                                </tr>
+                            }
+                            else
+                            {
+                                <tr class="even gradeX">
+                                    <td>@(i+1)</td>
+                                    <td>@Model.Products[i].ProductName</td>
+                                    <td>@Model.Products[i].UnitPrice.ToString("C2")</td>
+                                    <td>@Model.Products[i].UnitsInStock</td>
+                                    <td><a class="btn btn-xs btn-success right" asp-controller="Cart" asp-action="AddToCart" asp-route-productId="@Model.Products[i].ProductId">add to cart</a></td>
+                                </tr>
 
-    </table>
+                            }
+
+                        }
+                        @*@foreach (var product in Model.Products)
+                            {
+                                <tr class="odd gradeX">
+                                    <td>@product.ProductName</td>
+                                    <td>@product.UnitPrice</td>
+                                    <td>@product.UnitsInStock</td>
+                                    <td></td>
+                                </tr>
+
+                            }*@
+                    </tbody>
+                </table>
+                <!-- /.table-responsive -->
+                <div class="well">
+                    <h4>DataTables Usage Information</h4>
+                    <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
+                    <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
+                </div>
+            </div>
+            <!-- /.panel-body -->
+        </div>
+        <!-- /.panel -->
+    </div>
+    <!-- /.col-lg-12 -->
 </div>
-<product-list-pager 
-    current-category="@Model.CurrentCategory" 
-    current-page="@Model.CurrentPage"
-    page-count="@Model.PageCount"
-    page-size="@Model.PageSize">
-</product-list-pager>
-
+<!-- /.row -->
