--- a/RN.Lux.MvcWebUI/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/RN.Lux.MvcWebUI/Views/Shared/Components/CategoryList/Default.cshtml
@@ -1,12 +1,29 @@
 ﻿@model RN.Lux.MvcWebUI.Models.CategoryListVM
-<div class="list-group">
-    @foreach (var category in Model.Categories)
-    {
-        var css = "list-group-item";
-        if (category.CategoryID==Model.CurrentCategory)
-        {
-            css += " active";
-        }
-        <a  href="/product/index?categoryId=@category.CategoryID" class="@css">@category.CategoryName</a>
-    }
+<div class="panel panel-red">
+    <div class="panel-heading">
+        <i class="fa fa-bell fa-fw"></i> Categories Panel
+    </div>
+    <!-- /.panel-heading -->
+    <div class="panel-body">
+        <div class="list-group">
+            @foreach (var category in Model.Categories)
+            {
+                var css = "list-group-item";
+                if (category.CategoryID == Model.CurrentCategory)
+                {
+                    css += " active";
+                }
+            <a href="/product2/index?categoryId=@category.CategoryID" class="@css">
+                <i class="fa fa-product-hunt fa-fw"></i>
+                @category.CategoryName
+                <span class="pull-right text-muted small">
+                    <em>@category.CategoryID</em>
+                </span>
+            </a>
+            }
+        </div>
+        <!-- /.list-group -->
+        <a href="/product2/index?categoryId=0" class="btn btn-default btn-block">View All</a>
+    </div>
+    <!-- /.panel-body -->
 </div>
