--- a/RN.Lux.MvcWebUI/Views/Shared/_Layout_v2.cshtml
+++ b/RN.Lux.MvcWebUI/Views/Shared/_Layout_v2.cshtml
@@ -2,7 +2,6 @@
 
 <html>
 <head>
-
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/vendor/bootstrap/css/bootstrap.min.css")" rel="stylesheet" />
@@ -10,8 +9,8 @@
     <link href="@Url.Content("~/Content/dist/css/sb-admin-2.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/vendor/morrisjs/morris.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/vendor/font-awesome/css/font-awesome.min.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Content/media/images/favicon.png")" rel="shortcut icon" type="image/png"/>
     @RenderSection("CustomCss", false)
-
 </head>
 <body>
     <div id="wrapper">
@@ -24,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+                <a class="navbar-brand" href="/Product2/Index">Project For Lux V2.0</a>
             </div>
             <!-- /.navbar-header -->
             <ul class="nav navbar-top-links navbar-right">
@@ -254,7 +253,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="@Url.Action("Index","Product2")"><i class="fa fa-dashboard fa-fw"></i> Home</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
@@ -346,9 +345,14 @@
             </div>
             <!-- /.navbar-static-side -->
         </nav>
-        <div id="page-wrapper">
+    <div id="page-wrapper">
+        <div class="col-md-10">
             @RenderBody()
         </div>
+        <div class="col-md-2">
+            @await Component.InvokeAsync("CategoryList")
+        </div>
+    </div>
         <!-- /#page-wrapper -->
     </div>
 
