controller name change

--- a/RN.Lux.MvcWebUI/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/RN.Lux.MvcWebUI/Views/Shared/Components/CategoryList/Default.cshtml
@@ -13,7 +13,7 @@
                 {
                     css += " active";
                 }
-            <a href="/product2/index?categoryId=@category.CategoryID" class="@css">
+            <a href="/Product/index?categoryId=@category.CategoryID" class="@css">
                 <i class="fa fa-product-hunt fa-fw"></i>
                 @category.CategoryName
                 <span class="pull-right text-muted small">
@@ -23,7 +23,7 @@
             }
         </div>
         <!-- /.list-group -->
-        <a href="/product2/index?categoryId=0" class="btn btn-default btn-block">View All</a>
+        <a href="/Product/index?categoryId=0" class="btn btn-default btn-block">View All</a>
     </div>
     <!-- /.panel-body -->
 </div>
